# eagle-eye

./: .gitignore  CHANGELOG.md  EagleEye.icns  LICENSE  README.md  config.example.toml  eagleeye_launch.py  pyproject.toml  setup.py
assets/icon/: generate_icon.py
eagleeye/: __init__.py  app.py  cli.py  clock.py  config.py  permissions.py  subproc.py  supervisor.py
eagleeye/analysis/: ANALYZE.template.md  compile.py  dashboard.py  ledger.py  ledger.template.md  migrate.py  runner.py
eagleeye/capture/: frontmost.py  imagehash.py  keylog.py  nvim_ingest.py  sampler.py  screenshot.py
eagleeye/storage/: db.py  models.py  writer.py
editor/nvim/: README.md  install.sh  keylog.lua
scripts/: build-app.sh  build-dmg.sh  install-agent.sh  install.sh  make-dmg.sh  uninstall.sh
